# ansible-aipscan

./: .ansible-lint  Makefile  README.md  pyproject.toml  requirements.yml  sample-playbook.yml
.github/: dependabot.yml
.github/workflows/: pr.yml  validate-action-pinning.yml
action_plugins/: versions.py
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml  verify.yml
tasks/: install.yml  main.yml  selinux.yml  service.yml  uv.yml
templates/: aipscan_environment.j2
templates/nginx/sites-available/: aipscan.conf.j2
templates/sysconfig/: AIPscan.j2
templates/systemd/: AIPscan.service.j2  aipscan.service.j2  celery.service.j2
tests/: versions_test.py
vars/: Debian.yml  RedHat.yml  Rocky.yml  main.yml
